--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.1",
+    "@types/react-datepicker": "^6.2.0",
     "axios": "^1.7.9",
     "react": "^19.0.0",
     "react-content-loader": "^7.0.2",
+    "react-datepicker": "^8.2.1",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.2.0",
