--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.5.1",
+    "@faker-js/faker": "^9.6.0",
+    "@reduxjs/toolkit": "^2.6.1",
     "@types/react-datepicker": "^6.2.0",
     "axios": "^1.7.9",
     "react": "^19.0.0",
@@ -19,6 +20,9 @@
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.2.0",
+    "react-virtualized": "^9.22.6",
+    "react-window": "^1.8.11",
+    "tailwindcss": "^4.0.17",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
